# app/controllers/api/v1/author_names_controller.rb
@@ -1,15 +1,14 @@
 module Api::V1
-  class AuthorsController < Api::ApiController
+  class AuthorNamesController < Api::ApiController
     def index
-      authors = Author.all
+      authors = AuthorName.all
       render json: authors, status: :ok
-
     end
 
 
     def show
       begin
-        authors = Author.find(params[:id])
+        authors = AuthorName.find(params[:id])
       rescue ActiveRecord::RecordNotFound
         render nothing: true, status: :not_found
         return
